testsuite/tests/builtins/str_methods/starts_with/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:1:7 ]
   │
 1 │ print("Hello World".starts_with("Hel", prefix="Hel"))
   │       ───────────────────────┬──────────────────────  
   │                              ╰──────────────────────── The parameter "prefix" has been provided a positional and a named value
───╯
